--- a/wehelp.html
+++ b/wehelp.html
@@ -67,7 +67,7 @@
                 想要對我們說的事情？
             </li>
             <p class="text">
-                謝謝願意進行這麼友好的活動，幫助真的有需要，還花費這麼多時間，真是辛苦了。
+                謝謝願意進行這麼友好的活動，幫助真的有需要的人，還花費這麼多時間，真是辛苦了。
             </p>
         </ul>
     </div>
