--- a/wehelp.html
+++ b/wehelp.html
@@ -54,8 +54,7 @@
                 如果參與這個計畫，預期會碰到什麼困難？你打算怎麼解決它？
             </li>
             <p class="text">
-                我認為可能會有技術學習的困難，可能除了透過教學影片，還會在網路上查詢相關資料。或是會有背景知識不太了解的問
-                題，就需要多多補強。
+                我認為可能會有技術學習的困難，可能除了透過教學影片，還會在網路上查詢相關資料。或是會有背景知識不太了解的問題，就需要多多補強。
             </p>
             <li>
                 是否有想要加入的軟體公司？為什麼想加入該公司？
